--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap';
+@import '~resources/scss/partials/variables';
+@import '~resources/scss/partials/header';
+@import '~resources/scss/partials/footer';
+@import '~resources/scss/partials/jumbotron';
+@import '~resources/scss/partials/comics';
