Add single comic page

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,3 +5,4 @@
 @import '~resources/scss/partials/footer';
 @import '~resources/scss/partials/jumbotron';
 @import '~resources/scss/partials/comics';
+@import '~resources/scss/partials/comic';
