Change comics list to table to better manage comics

--- a/resources/scss/partials/_comics.scss
+++ b/resources/scss/partials/_comics.scss
@@ -1,71 +1,6 @@
-#comics_list {
-
-  background-color: $dc-dark-color;
-  color: $dc-lighter-color;
+.table-responsive,
+nav {
+  background-color: white;
   position: relative;
-
-  #page_title {
-    font-family: "PT Sans Narrow", sans-serif;
-    font-weight: bold;
-    width: 267px;
-    background-color: #0282f9;
-    position: relative;
-    top: -59px;
-    left: 290px;
-    padding: 16px 36px 16px 36px;
-  }
-
-  a {
-    text-decoration: none;
-    color: $dc-lighter-color;
-
-    .comic_serie {
-      font-family: "Open Sans", sans-serif;
-      font-size: 0.95rem;
-    }
-
-    img {
-      height: 196px;
-      aspect-ratio: 1;
-      object-fit: cover;
-      object-position: top;
-    }
-  }
-
-
-  .load_more_btn {
-    font-family: "PT Sans Narrow", sans-serif;
-    font-weight: bold;
-    font-size: 0.9rem;
-    color: #ffffff;
-    width: 181px;
-    background-color: #0282f9;
-  }
-}
-
-#cta_banner {
-  background-color: $dc-primary-color;
-  position: relative;
-  z-index: 1;
-
-  a {
-    text-decoration: none;
-    color: $dc-lighter-color;
-    font-size: 0.9rem;
-  }
-
-  .digital_comics,
-  .shop_locator {
-    img {
-      max-height: 50px;
-    }
-  }
-
-  .dc_merch,
-  .subscriptions,
-  .dc_power_visa {
-    img {
-      max-width: 50px;
-    }
-  }
+  z-index: 9999;
 }
