Add fillable property in comic model. Add icons in table actions

--- a/resources/scss/partials/_comics.scss
+++ b/resources/scss/partials/_comics.scss
@@ -1,7 +1,7 @@
 .table-responsive,
 .add_new,
 nav {
-  background-color: white;
+  background-color: $dc-comic-specs-bg-color;
   position: relative;
   z-index: 9999;
 }
